# sysmind

./: README.md  install.py  pyproject.toml  sysmind.py  sysmind_common.py  sysmind_platform.py  sysmind_scan.py  sysmind_scan_linux.py  sysmind_scan_windows.py  sysmind_strings.py  sysmind_sync.py  sysmind_turn.py
tests/: test_packaging.py  test_placeholders.py
